--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "dependencies": {
-    "better-sqlite3": "^9.0.9",
-    "express": "^4.18.2",
-    "nodemailer": "^6.9.7"
+   "better-sqlite3": ">=11.6.0",
+   "express": ">=4.21.1",
+   "nodemailer": ">=6.9.16"
   },
   "name": "5v-webshop",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "start.sh",
   "scripts": {
     "start": "bash start.sh"
